[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Alexander Zafirov <alexander@zafirov.me>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.0.0-beta.15"
actix-web = "4.0.0-beta.14"

[dev-dependencies]
actix-rt = "2.5.0"
reqwest = "0.11"
tokio = "1.14.0"
